<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/userlogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/userlogo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="80dp"
                android:text="@string/change_data"
                android:onClick="changeData"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/subjectlogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/subjectlogo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/view_subjects" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/studentlogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/userlogo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/all_students" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/teacherlogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/userlogo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/all_teachers" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>